refactor backend code for easier management

--- a/frontend/public/locales/lo/translation.json
+++ b/frontend/public/locales/lo/translation.json
@@ -265,7 +265,7 @@
     "table_header_price": "ລາຄາ",
     "table_header_stock": "ຈຳນວນ",
     "table_header_image": "ຮູບພາບ",
-    "table_header_actions": "ການກະທໍາ",
+    "table_header_actions": "ຈັດການ",
     "no_image": "ບໍ່ມີຮູບພາບ",
     "edit_button": "ແກ້ໄຂ",
     "delete_button": "ລຶບ",
@@ -283,7 +283,7 @@
     "delete_failed": "ລຶບໝວດໝູ່ບໍ່ສຳເລັດ: {{error}}",
     "confirm_add": "ທ່ານແນ່ໃຈບໍ່ວ່າຕ້ອງການເພີ່ມໝວດໝູ່ນີ້?",
     "confirm_update": "ທ່ານແນ່ໃຈບໍ່ວ່າຕ້ອງການແກ້ໄຂໝວດໝູ່ນີ້?",
-    "confirm_delete": "ທ່ານແນ່ໃຈບໍ່ວ່າຕ້ອງການລຶບໝວດໝູ່ນີ້? ການກະທໍານີ້ບໍ່ສາມາດຍົກເລີກໄດ້.",
+    "confirm_delete": "ທ່ານແນ່ໃຈບໍ່ວ່າຕ້ອງການລຶບໝວດໝູ່ນີ້? ການຈັດການນີ້ບໍ່ສາມາດຍົກເລີກໄດ້.",
     "loading": "ກຳລັງໂຫຼດໝວດໝູ່...",
     "error": "ຂໍ້ຜິດພາດ: {{error}}",
     "title": "ຈັດການຂໍ້ມູນປະເພດສິນຄ້າ",
@@ -308,7 +308,7 @@
     "update_status_failed": "ອັບເດດສະຖານະບໍ່ສຳເລັດ",
     "delete_failed": "ລຶບຄຳສັ່ງຊື້ບໍ່ສຳເລັດ",
     "fetch_details_failed": "ດຶງຂໍ້ມູນລາຍລະອຽດຄຳສັ່ງຊື້ບໍ່ສຳເລັດ",
-    "confirm_delete": "ທ່ານແນ່ໃຈບໍ່ວ່າຕ້ອງການລຶບຄຳສັ່ງຊື້ນີ້? ການກະທໍານີ້ບໍ່ສາມາດຍົກເລີກໄດ້.",
+    "confirm_delete": "ທ່ານແນ່ໃຈບໍ່ວ່າຕ້ອງການລຶບຄຳສັ່ງຊື້ນີ້? ການຈັດການນີ້ບໍ່ສາມາດຍົກເລີກໄດ້.",
     "title": "ຈັດການຂໍ້ມູນການສັ່ງຊື້ສິນຄ້າ",
     "filter_status_label": "ກັ່ນຕອງຕາມສະຖານະ:",
     "all_statuses_option": "ທັງໝົດ",
@@ -385,8 +385,8 @@
     "Orders": "ຄຳສັ່ງຊື້",
     "TotalSpent": "ຍອດໃຊ້ຈ່າຍທັງໝົດ",
     "Created": "ວັນທີ",
-    "Actions": "ການກະທໍາ",
-    "confirmDelete": "ທ່ານແນ່ໃຈບໍ່ວ່າຕ້ອງການລຶບລູກຄ້ານີ້? ການກະທໍານີ້ບໍ່ສາມາດຍົກເລີກໄດ້.",
+    "Actions": "ຈັດການ",
+    "confirmDelete": "ທ່ານແນ່ໃຈບໍ່ວ່າຕ້ອງການລຶບລູກຄ້ານີ້? ການຈັດການນີ້ບໍ່ສາມາດຍົກເລີກໄດ້.",
     "ordersFor": "ຄຳສັ່ງຊື້ຂອງ {{username}}",
     "loadingOrdersModal": "ກຳລັງໂຫຼດຄຳສັ່ງຊື້...",
     "errorLoadingOrdersModal": "{{error}}",
@@ -445,7 +445,7 @@
     "admin": "ຜູ້ໃຊ້ລະບົບ",
     "registered": "ລົງທະບຽນເມື່ອ",
     "status": "ສະຖານະ",
-    "actions": "ການກະທໍາ"
+    "actions": "ຈັດການ"
   },
   "new_order_notification": {
     "title": "ແຈ້ງເຕືອນ",
@@ -478,7 +478,7 @@
 
   "Confirm": "ຢືນຢັນ",
   "Cancel": "ຍົກເລີກ",
-  "Confirm Action": "ຢືນຢັນການກະທໍາ",
+  "Confirm Action": "ຢືນຢັນການຈັດການ",
 
   "view_invoice_button": "ເບິ່ງໃບບິນ",
   "invoice_title": "ໃບບິນ",
