Enhance backend validation and error handling: integrate express-validator for input validation across various routes, improve user registration and profile update processes with detailed error messages, and update admin management routes for better data handling and response consistency.

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -219,6 +219,7 @@
   "register_login_link": "Login here",
   "register_success_message": "Registration successful! Please log in.",
   "register_failed_message": "Registration failed: {{error}}",
+  "register_failed_validation_message": "Password must be more than 6",
   "register_alert_close_button": "Close",
 
   "admin_dashboard": {
