continue create responsive design for mobile user

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -33,6 +33,7 @@
   "out_of_stock": "Out of Stock",
   "stock_label": "Stock",
   "Orders": "Orders",
+  "change_language": "Change Language",
 
   "footer": {
     "contact_us": "Contact Us",
