--- a/frontend/public/locales/lo/translation.json
+++ b/frontend/public/locales/lo/translation.json
@@ -33,6 +33,7 @@
   "out_of_stock": "ສິນຄ້າຫມົດ",
   "stock_label": "ສິນຄ້າຍັງເຫຼືອ",
   "Orders": "ຄຳສັ່ງຊື້",
+  "change_language": "ປ່ຽນພາສາ",
 
   "footer": {
     "contact_us": "ຕິດຕໍ່ພວກເຮົາ",
