create loading animation instead of text and improve design on some page

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -34,6 +34,7 @@
   "stock_label": "Stock",
   "Orders": "Orders",
   "change_language": "Change Language",
+  "time": "Time",
 
   "footer": {
     "contact_us": "Contact Us",
