--- a/frontend/public/locales/lo/translation.json
+++ b/frontend/public/locales/lo/translation.json
@@ -34,6 +34,7 @@
   "stock_label": "ສິນຄ້າຍັງເຫຼືອ",
   "Orders": "ຄຳສັ່ງຊື້",
   "change_language": "ປ່ຽນພາສາ",
+  "time": "ເວລາ",
 
   "footer": {
     "contact_us": "ຕິດຕໍ່ພວກເຮົາ",
