create forgot password feature for user

--- a/frontend/public/locales/en/translation.json
+++ b/frontend/public/locales/en/translation.json
@@ -35,6 +35,19 @@
   "Orders": "Orders",
   "change_language": "Change Language",
   "time": "Time",
+  "login_forgot_password_link": "Forgot Password?",
+  "forgot_password_title": "Forgot Password",
+  "forgot_password_email_label": "Email",
+  "forgot_password_email_placeholder": "Enter your email address",
+  "forgot_password_send_button": "Send Reset Link",
+  "forgot_password_error_message": "Error: {{error}}",
+  "forgot_password_success_message": "A password reset link has been sent to your email address.",
+  "reset_password_title": "Reset Password",
+  "reset_password_new_label": "New Password",
+  "reset_password_new_password_placeholder": "Enter your new password",
+  "reset_password_confirm_label": "Confirm Password",
+  "reset_password_submit_button": "Reset Password",
+  "reset_password_success_message": "Your password has been reset successfully. You can now log in with your new password.",
 
   "footer": {
     "contact_us": "Contact Us",
